<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_DailyActivity"
            android:icon="@drawable/ic_dailyact"
            android:title="@string/daily_activity" />
        <item
            android:id="@+id/nav_Gallery"
            android:icon="@drawable/ic_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_MV"
            android:icon="@drawable/ic_musicvideo"
            android:title="@string/music_video" />
        <item
            android:id="@+id/nav_Profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
    </group>
</menu>